# megano

./: README.md
mysite/: .gitignore  Dockerfile  docker-compose.yaml  log.txt  log.txt.1  log.txt.2  pyproject.toml  requirements.txt
mysite/cart/: models.py  serializers.py  urls.py  views.py
mysite/cart/migrations/: 0001_initial.py
mysite/fixtures/: fixture_order.json  fixture_product.json  fixture_users.json
mysite/myauth/: models.py  serializers.py  urls.py  views.py
mysite/myauth/management/commands/: create_user.py
mysite/myauth/migrations/: 0001_initial.py
mysite/mysite/: settings.py  urls.py  wsgi.py  новый 3.txt
mysite/orders/: models.py  serializers.py  urls.py  views.py
mysite/orders/migrations/: 0001_initial.py
mysite/payment/: urls.py  views.py
mysite/products/: admin.py  admin_mixins.py  common.py  forms.py  middlewares.py  models.py  serializers.py  urls.py  views.py
mysite/products/management/commands/: create_product.py
mysite/products/migrations/: 0001_initial.py  0002_remove_category_subcategories_subcategory_category.py
mysite/shop/: admin.py  models.py  serializers.py  urls.py  views.py
mysite/shop/migrations/: 0001_initial.py
mysite/static/frontend/assets/js/: order-detail.js  payment.js  scripts.js
